--- a/board2/src/main/resources/application.properties
+++ b/board2/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.url=jdbc:mariadb://localhost:3306/board2
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
