--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.url=jdbc:mariadb://localhost:3306/member
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.how-sql=true
 spring.jpa.properties.hibernate.format_sql=true
